The HTML part is finished

--- a/index.html
+++ b/index.html
@@ -1,12 +1,316 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <!-- =====HEADER-START===== -->
+    <header id="header">
+      <div class="container">
+        <a class="main-header_logo" href="#"
+          ><img src="./img/LOGO.png" alt="logo"
+        /></a>
+        <nav class="nav">
+          <ul class="nav_list">
+            <li class="nav_item">
+              <a class="nav_link" href="#Hero "></a>Home
+              <span class="nav_line"></span>
+            </li>
+            <li class="nav_item">
+              <a class="nav_link" href="#About "></a>About
+              <span class="nav_line"></span>
+            </li>
+            <li class="nav_item">
+              <a class="nav_link" href="#work"></a>Services
+              <span class="nav_line"></span>
+            </li>
+            <li class="nav_item">
+              <a class="nav_link" href="#costumers"></a>Reviews
+              <span class="nav_line"></span>
+            </li>
+          </ul>
+        </nav>
+        <a class="header_rigth_link btn1" href="#">Get Started </a>
+      </div>
+    </header>
+    <!-- =====HEADER-END===== -->
+    <!-- =====MAIN_START===== -->
+    <main id="main">
+      <!-- =====HERO-START===== -->
+      <section id="hero">
+        <div class="container container_hero">
+          <div class="hero_content">
+            <p class="hero_title-top">Smart Business</p>
+            <h2 class="hero_title titles">
+              Connecting people is our <span class="span_color"> business</span>
+            </h2>
+            <p class="hero_text texts">
+              As a rule the organization settles on the inventive and media
+              choices. Regularly it supplies supporting statistical.
+            </p>
+            <div class="hero_button">
+              <button class="btn1 btn_hero" type="button">Get Started</button>
+              <a href="#"
+                ><img
+                  class="hero_play"
+                  src="./img/play-icon.svg"
+                  alt="play_video_icon"
+                />
+                Play Video</a
+              >
+            </div>
+          </div>
+          <div class="hero_img"></div>
+        </div>
+      </section>
+      <!-- ======HERO_END===== -->
+      <!-- =====ABOUT-START===== -->
+      <section id="about">
+        <div class="container container_about">
+          <div class="about_img"></div>
+          <div class="about_content">
+            <p class="about_title-top">About us</p>
+            <h2 class="about_title titles">Platform Dedicated To Promoting</h2>
+            <p class="about_text texts">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              vestibulum sagittis ultrices consectetur adipiscing elit.
+              fringilla quisque pulvinar..
+            </p>
+            <a class="about_link btn1" href="#"> What we do? </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- =====ABOUT-END===== -->
+      <!-- =====WORK-START===== -->
+      <section id="work">
+        <div class="container container_work">
+          <h2 class="work_title titles">How We Work</h2>
+          <ul class="work_list">
+            <li class="work_item">
+              <img class="work_svg" src="./img/desing-svg.svg" alt="icon" />
+              <h3 class="work_item_title">Start Design</h3>
+              <p class="work_item_text texts">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                molestias earum deleniti?
+              </p>
+            </li>
+            <li class="work_item">
+              <img class="work_svg" src="./img/code_svg.svg" alt="icon" />
+              <h3 class="work_item_title">Go to Code</h3>
+              <p class="work_item_text texts">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                molestias earum deleniti?
+              </p>
+            </li>
+            <li class="work_item">
+              <img class="work_svg" src="./img/final-svg.svg" alt="icon" />
+              <h3 class="work_item_title">Final Deliverd</h3>
+              <p class="work_item_text texts">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                molestias earum deleniti?
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- =====WORK-END===== -->
+      <!-- =====COSTUMERS-START===== -->
+      <section id="costumers">
+        <div class="container container_costumers">
+          <div class="costumers_header">
+            <h2 class="costumers_title titles">
+              What Our Customers are Saying.
+            </h2>
+            <div class="buttons">
+              <button class="costumer_btn" type="button">
+                <img src="./img/button.svg" alt="left-icon" />
+              </button>
+              <button class="costumer_btn" type="button">
+                <img src="./img/button.svg" alt="rigth-icon" />
+              </button>
+            </div>
+          </div>
+          <div class="costumer_content">
+            <div class="costumer_bg_box">
+              <div class="costumer_box">
+                <img
+                  class="avatar"
+                  src="./img/avatar.png"
+                  alt="user-profile-picture"
+                />
+                <p class="costumer_text texts">
+                  I recently concluded a complete messaging revamp for an
+                  exciting com
+                </p>
+                <h3 class="costumer_name">
+                  <span class="costumer_line"></span>Leo Aminoff
+                </h3>
+                <p class="costumer_profession">Product Designer</p>
+              </div>
+              <div class="costumer_bg_box">
+                <div class="costumer_box">
+                  <img
+                    class="avatar"
+                    src="./img/avatar-2.png"
+                    alt="user-profile-picture"
+                  />
+                  <p class="costumer_text texts">
+                    I recently concluded a complete messaging revamp for an
+                    excitin company
+                  </p>
+                  <h3 class="costumer_name">
+                    <span class="costumer_line"></span>Carla Dias
+                  </h3>
+                  <p class="costumer_profession">Product Designer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- =====COSTUMERS-END===== -->
+
+      <!-- =====NEWSLETTER-START===== -->
+      <section id="newsletter">
+        <div class="container container_newsletter">
+          <h2 class="newsletter_title">Sign Up to Our Newsletter</h2>
+          <p class="newsletter_text">Yours could be one of them.</p>
+          <form class="form" method="get" action="https://echo.htmlacademy.ru/">
+            <img src="./img/MAIL.svg" alt="mail-svg" />
+            <input
+              class="form_input"
+              required
+              autocomplete="off"
+              aria-label="Enter your email"
+              placeholder="Enter your email "
+              type="email"
+            />
+            <button class="form_btn btn1" type="submit">Send</button>
+          </form>
+        </div>
+      </section>
+      <!-- =====NEWSLETTER-END===== -->
+    </main>
+    <!-- =====MAIN-END===== -->
+
+    <!-- =====FOOTER-START===== -->
+    <footer id="footer">
+      <div class="container container_footer">
+        <div class="footer_top">
+          <ul class="footer_list">
+            <li class="footer_item">
+              <a href="#"><img src="./img/LOGO.png" alt="logo" /></a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#">Smart business</a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#">Community</a>
+            </li>
+          </ul>
+          <ul class="footer_list">
+            <li class="footer_item">
+              <p class="footer_title">Resources</p>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#hero"> Start Business</a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#about">
+                Digital Marketing</a
+              >
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#work">
+                Course Creation</a
+              >
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#costumers">
+                Business Accelerator</a
+              >
+            </li>
+          </ul>
+
+          <ul class="footer_list">
+            <li class="footer_item">
+              <p class="footer_title">Mission</p>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#hero">
+                About Digital Analyst</a
+              >
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#about"> Team</a>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#work">
+                Become a Partner</a
+              >
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#costumers">
+                Privacy Policy</a
+              >
+            </li>
+          </ul>
+          <ul class="footer_list">
+            <li class="footer_item">
+              <p class="footer_title">Contact</p>
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="tel:+041774073"
+                >041-774073
+              </a>
+            </li>
+            <li class="footer_item">
+              <a
+                class="footer_item_link texts"
+                href="mailto:hello@digitalanalyst.org"
+                >hello@digitalanalyst.org</a
+              >
+            </li>
+            <li class="footer_item">
+              <a class="footer_item_link texts" href="#">Contact Form</a>
+            </li>
+          </ul>
+          <div class="footer_bottom">
+            <p class="footer_text">
+              © 2021 DigitalAnalyst.org. A 50 non-profit organization. EIN:
+              -3410655
+            </p>
+            <ul>
+              <li>
+                <a href="#"><img src="./img/Facebook.svg" alt="icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/Twiter.svg" alt="icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/you_tube.svg" alt="icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/Instagram.svg" alt="icon" /></a>
+              </li>
+            </ul>
+            <button type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- =====FOOTER-END===== -->
+  </body>
 </html>
