--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
           <form class="form" method="get" action="https://echo.htmlacademy.ru/">
             <img src="./img/MAIL.svg" alt="mail-svg" />
             <input
+            name="email"
               class="form_input"
               required
               autocomplete="off"
@@ -196,7 +197,7 @@
               placeholder="Enter your email "
               type="email"
             />
-            <button class="form_btn btn1" type="submit">Send</button>
+           <input class="form_btn btn1" type="submit" value="Send">
           </form>
         </div>
       </section>
