--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="./img/LOGO.png" type="image/x-icon">
+    <title>Digtal Ocean</title>
   </head>
 
   <body>
